update topic view

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kokoa",
-  "version": "1.0.0",
+  "name": "hawawa",
+  "version": "3.0.0",
   "description": "Nuxt.js project",
   "author": "",
   "private": false,
