--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "pbkdf2-password": "^1.2.1",
     "redis": "^2.8.0",
+    "socket.io": "^2.2.0",
+    "socket.io-redis": "^5.2.0",
     "uuid": "^3.3.2"
   }
 }
