--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "element-ui": "^2.7.2",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
+    "socket.io-client": "^2.2.0",
     "vue2-editor": "^2.6.6"
   },
   "devDependencies": {
