--- a/updater/package.json
+++ b/updater/package.json
@@ -8,6 +8,6 @@
   "scripts": {
     "start": "node src",
     "start:prod": "pm2 start src --name TOPICS_HITS_UPDATER",
-    "start:reprod": "pm2 restart src --name TOPICS_HITS_UPDATER"
+    "restart:prod": "pm2 restart src --name TOPICS_HITS_UPDATER"
   }
 }
