--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "start:prod": "pm2 start npm --name 'FRONTEND' -- start",
+    "restart:prod": "pm2 restart npm --name 'FRONTEND' -- start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
