--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/bulma": "^1.2.3",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/proxy": "^1.3.3",
     "element-ui": "^2.7.2",
