--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "config": {
     "nuxt": {
-      "host": "localhost",
+      "host": "127.0.0.1",
       "port": "3001"
     }
   },
@@ -22,11 +22,11 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/bulma": "^1.2.3",
     "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/proxy": "^1.3.3",
+    "axios": "^0.18.0",
     "element-ui": "^2.7.2",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
