--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "start": "nodemon --watch src/ src/index.js",
-    "start:prod": "pm2 start src --name BACKEND -i 0",
-    "restart:prod": "pm2 restart src --name BACKEND -i 0"
+    "start:prod": "pm2 start src --name BACKEND",
+    "restart:prod": "pm2 restart src --name BACKEND"
   },
   "dependencies": {
     "child_process": "^1.0.2",
