--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@nuxtjs/bulma": "^1.2.3",
-    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/proxy": "^1.3.3",
     "axios": "^0.18.0",
     "element-ui": "^2.7.2",
     "nuxt": "^2.0.0",
+    "nuxt-clipboard2": "^0.2.1",
     "nuxt-fontawesome": "^0.4.0",
     "socket.io-client": "^2.2.0",
     "vue2-editor": "^2.6.6"
