--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/proxy": "^1.3.3",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "element-ui": "^2.7.2",
+    "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.0.0",
     "nuxt-clipboard2": "^0.2.1",
     "nuxt-fontawesome": "^0.4.0",
