--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hawawa",
-  "version": "3.0.0",
-  "description": "Nuxt.js project",
+  "name": "idolboard",
+  "version": "1.0.0",
+  "description": "idolboard project",
   "author": "",
   "private": false,
   "config": {
@@ -14,8 +14,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "start:prod": "pm2 start npm --name 'HAWAWA FRONTEND' -- start",
-    "restart:prod": "pm2 restart npm --name 'HAWAWA FRONTEND' -- start",
+    "start:prod": "pm2 start npm --name 'IDOLBOARD FRONTEND' -- start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
