--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,11 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/bulma": "^1.2.3",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/proxy": "^1.3.3",
-    "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "element-ui": "^2.7.2",
     "hchs-vue-charts": "^1.2.8",
