--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,29 @@
     "start:prod": "pm2 start src --name 'IDOLBOARD BACKEND'"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "giflossy": "^3.0.41",
-    "helmet": "^3.15.0",
-    "jsonwebtoken": "^8.4.0",
-    "koa": "^2.6.2",
+    "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
-    "koa-logger": "^3.2.0",
+    "koa-logger": "^3.2.1",
     "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.22.2",
-    "mysql": "^2.16.0",
+    "mysql": "^2.17.1",
     "node-schedule": "^1.3.1",
     "nodemailer": "^4.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "pbkdf2-password": "^1.2.1",
+    "qs": "^6.9.0",
     "redis": "^2.8.0",
+    "sharp": "^0.23.1",
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "uuid": "^3.3.2"
