--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,27 +20,28 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@nuxtjs/axios": "^5.5.4",
-    "@nuxtjs/bulma": "^1.2.3",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@nuxtjs/axios": "^5.6.0",
+    "@nuxtjs/bulma": "^1.2.5",
     "@nuxtjs/google-adsense": "^1.1.3",
-    "@nuxtjs/moment": "^1.2.0",
+    "@nuxtjs/moment": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/recaptcha": "^0.5.3",
     "chart.js": "^2.8.0",
-    "element-ui": "^2.7.2",
+    "element-ui": "^2.12.0",
     "hchs-vue-charts": "^1.2.8",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.10.0",
     "nuxt-clipboard2": "^0.2.1",
     "nuxt-fontawesome": "^0.4.0",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^2.3.0",
     "vue-masonry-css": "^1.0.3",
-    "vue2-editor": "^2.6.6"
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-vue": "^4.0.0"
   }
 }
