--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/bulma": "^1.2.5",
     "@nuxtjs/google-adsense": "^1.1.3",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/moment": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/recaptcha": "^0.5.3",
