--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/bulma": "^1.2.5",
     "@nuxtjs/google-adsense": "^1.1.3",
-    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/moment": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/recaptcha": "^0.5.3",
@@ -35,6 +34,7 @@
     "nuxt-clipboard2": "^0.2.1",
     "nuxt-fontawesome": "^0.4.0",
     "socket.io-client": "^2.3.0",
+    "vue-analytics": "^5.17.2",
     "vue-masonry-css": "^1.0.3",
     "vue2-editor": "^2.10.2"
   },
