--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/moment": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/recaptcha": "^0.5.3",
+    "apexcharts": "^3.10.1",
     "chart.js": "^2.8.0",
     "element-ui": "^2.12.0",
     "hchs-vue-charts": "^1.2.8",
@@ -35,6 +36,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "socket.io-client": "^2.3.0",
     "vue-analytics": "^5.17.2",
+    "vue-apexcharts": "^1.5.1",
     "vue-masonry-css": "^1.0.3",
     "vue2-editor": "^2.10.2"
   },
